# synapse-trace

./: .dockerignore  .gitignore  .gitlab-ci.yml  AI_USAGE_INSTRUCTIONS.md  API_DOCUMENTATION.md  BACKEND_INSTRUCTIONS.md  CLAUDE.md  CLAUDE_MASTER_INSTRUCTIONS.md  DATA_LINEAGE_REQUIREMENTS_V3.md  FRONTEND_INSTRUCTIONS.md  NON_NEGOTIABLE_DEVELOPMENT_RULES.md  PROJECT_SUMMARY.md  README.md  REQUIREMENT_MANAGEMENT_INSTRUCTIONS.md  project_metadata.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/app/: Dockerfile  config.py  logging_config.py
backend/config/: jurisdiction.json  logging.yaml  repositories.yaml
configs/: app.yaml  logging.yaml  trace_rules.yaml
docs/: API_DOCUMENTATION.md  PROJECT_SUMMARY.md  architecture.md  frontend-guide.md  live-events.md  parser-output.md  trace-examples.md  usage-guide.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
modules/: __init__.py
output/: lineage_graph.html  lineage_graph.json
output-multiproj/: lineage_graph.html  lineage_graph.json
scripts/: reindex.py  run_api.py  run_trace.py  sample_trace_request.py  start_app.bat  start_app.sh  start_app_bg.sh  start_frontend.bat  start_frontend.sh  start_frontend_bg.sh  start_job.bat  start_job.sh  start_job_bg.sh  stop_app.sh  stop_frontend.sh  stop_job.sh  test_manual.py
scripts-n/: graph_to_neo4j.py  neo4j_field_lineage.py  reconstruct_xslt_from_neo4j.py  xslt_to_graph.py
src/: synapse_trace.db  synapse_trace.db-shm  synapse_trace.db-wal
tests/: test_smoke.py
(+330 files in other folders)
